--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
     <div class="header text-center">
       <h1>DeepSpace</h1>
+      <h1 style="background-color:DodgerBlue;">Hello World</h1>
+<p style="background-color:Tomato;">Lorem ipsum...</p>
       <hr/>
     </div>
     <br>
