--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 
     <div class="header text-center">
       <h1>DeepSpace</h1>
-      <h1 style="background-color:DodgerBlue;">Hello World</h1>
-      <p style="background-color:Tomato;">Lorem ipsum...</p>
+      <h1 style="color:Tomato;">DeepSpace</h1>
+      <p style="color:DodgerBlue;">Lorem ipsum...</p>
+      <p style="color:MediumSeaGreen;">Ut wisi enim...</p>
       <hr/>
     </div>
     <br>
