--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <div class="header text-center">
       <h1>DeepSpace</h1>
       <h1 style="color:Tomato;">DeepSpace</h1>
-      <p style="color:DodgerBlue;">Hello Subharanjan Ojha Good Afternoon...</p>
-      <p style="color:MediumSeaGreen;">Ut wisi enim...</p>
+      <h1 style="color:Tomato;">Hello Subharanjan Ojha Good Afternoon</h1>
+      
       <hr/>
     </div>
     <br>
