--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <h1>DeepSpace</h1>
       <h1 style="color:Tomato;">DeepSpace</h1>
       <h1 style="color:Tomato;">Hello Subharanjan Ojha Good Afternoon</h1>
+      <img src/main/webapps/images/"earth.png"="url" alt="alternatetext">
       
       <hr/>
     </div>
