--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <h1>DeepSpace</h1>
       <h1 style="color:Tomato;">DeepSpace</h1>
       <h1 style="color:Tomato;">Hello Subharanjan Ojha Good Afternoon</h1>
-      <img src/main/webapps/images="earth.png" alt="earth.png">
+      <img "src/main/webapps/images/earth.png" alt="earth.png">
       
       <hr/>
     </div>
