--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <div class="header text-center">
       <h1>DeepSpace</h1>
-      <h1 style="color:red;">DeepSpace</h1>
+      <h1 style="color:blue;">DeepSpace</h1>
       <h1 style="color:Tomato;">Hello Subharanjan Ojha Good Afternoon</h1>
       <img "src/main/webapps/images/earth.png" alt="earth.png">
       
