--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="header text-center">
       <h1>DeepSpace</h1>
       <h1 style="color:Tomato;">DeepSpace</h1>
-      <h1 style="color:Tomato;">Hello Subharanjan Ojha Good Afternoon</h1>
+      <h1 style="color:Tomato;">Hello Subharanjan</h1>
       <img "src/main/webapps/images/earth.png" alt="earth.png">
       
       <hr/>
